--- a/adaptive_app/web/index.html
+++ b/adaptive_app/web/index.html
@@ -24,6 +24,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="adaptive_app">
+  <meta name="google-signin-client_id"
+  content="394414978147-49v8us2u0it3dnti555v9mv5npk3qq96.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
